fix title's overflow

--- a/client/styles/Event.module.css
+++ b/client/styles/Event.module.css
@@ -14,6 +14,7 @@
   display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
+  line-height: 1.8rem;
   overflow: hidden;
 }
 
